--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(forfedrediagram)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(forfedrediagram
-        src/main.cpp)
+        src/main.cpp src/Person.hpp)
