Included catch library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,9 @@ project(forfedrediagram)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(forfedrediagram
-        src/main.cpp src/Person.hpp)
+        src/main.cpp
+        src/Person.hpp
+        src/Node.hpp)
+
+add_executable(test
+        test/testMain.cpp)
