--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(forfedrediagram
         src/main.cpp
         src/Person.hpp
-        src/Node.hpp)
+        src/Node.hpp src/Tree.hpp)
 
 add_executable(test
         test/test_main.cpp
