--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,24 +3,11 @@ project(forfedrediagram)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(forfedrediagram
-        src/main.cpp
-        src/Person.hpp
-        src/Node.hpp
-        src/Tree.hpp
-        src/globals.hpp)
+
+enable_testing() #Enable c-tests for testing in GitHub workflows
+add_subdirectory(tests) # Ligger egen CMakeLists.txt i mappen tests
+
+add_subdirectory(src)
 
 
-add_executable(TestTree
-        test/test_tree.cpp
-        #test/test_usefulFunctions.cpp
-        )
 
-add_executable(TestPerson
-        test/test_person.cpp
-        #test/test_usefulFunctions.cpp
-        )
-
-add_executable(TestUsefulFunctions
-        test/test_usefulFunctions.cpp
-        )
