--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,6 @@
 /cmake-build-*
 *.idea
 
-# Testing - uncomment /test for ignoring the test system
-#/test
-/test/test_files
+# Testing - uncomment /tests for ignoring the tests system
+#/tests
+/tests/test_files
