--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ add_executable(Forfedrediagram
         Person.cpp)
 
 target_include_directories(Forfedrediagram
-        PUBLIC "${CMAKE_SOURCE_DIR}/include")
+        PUBLIC "${CMAKE_SOURCE_DIR}/include"
+        PUBLIC "${CMAKE_SOURCE_DIR}/test_files")
+
 
 # ${CMAKE_SOURCE_DIR} er en variabel for roten til prosjektet
