Get user input with the potential of empty input

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,10 @@
-add_executable(Forfedrediagram
+add_library(FamilyTree_LIB
         main.cpp
         Menu.cpp
         Person.cpp)
 
-target_include_directories(Forfedrediagram
-        PUBLIC "${CMAKE_SOURCE_DIR}/include"
-        PUBLIC "${CMAKE_SOURCE_DIR}/test_files")
+target_include_directories(FamilyTree_LIB
+        PUBLIC "${CMAKE_SOURCE_DIR}/include")
 
 
 # ${CMAKE_SOURCE_DIR} er en variabel for roten til prosjektet
