--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,13 @@
 add_library(FamilyTree_LIB
-        main.cpp
+        FamilyTree.cpp
         Menu.cpp
         Person.cpp)
 
 target_include_directories(FamilyTree_LIB
-        PUBLIC "${CMAKE_SOURCE_DIR}/include")
+        PRIVATE
+        "${CMAKE_SOURCE_DIR}/src"
+        PUBLIC
+        "${CMAKE_SOURCE_DIR}/include")
 
 
 # ${CMAKE_SOURCE_DIR} er en variabel for roten til prosjektet
