--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,6 +24,27 @@ jobs:
           cd build/tests
           ctest --output-on-failure
           
+  build-on-macos:
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure and build
+        run: |
+          cmake . -B build
+          cmake --build build
+          
+      - name: Test
+        run: |
+          cd build/tests
+          ctest --output-on-failure
+          
           
   build-on-windows:
 
@@ -45,3 +66,5 @@ jobs:
         run: |
           cd build/tests
           ctest -C --output-on-failure
+          
+          
