--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,10 +6,9 @@ link_libraries(FamilyTree_LIB)
 add_executable(TestTree test_tree.cpp)
 add_test(NAME TestTree COMMAND TestTree)
 
-
 add_executable(TestPerson test_person.cpp)
 add_test(NAME TestPerson COMMAND TestPerson)
+target_include_directories(TestPerson PUBLIC "${CMAKE_SOURCE_DIR}/CLI/include")
 
-
-add_executable(TestUsefulFunctions test_usefulFunctions.cpp)
+add_executable(TestUsefulFunctions test_commonFunctions.cpp)
 add_test(NAME TestUsefulFunctions COMMAND TestUsefulFunctions)
