--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ project(forfedrediagram)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(ATree-API)
+add_subdirectory(examples)
 
 enable_testing() #Enable c-tests for testing in GitHub workflows
 add_subdirectory(tests) # Ligger egen CMakeLists.txt i mappen tests
-add_subdirectory(src)
-add_subdirectory(CLI)
+
+
 #add_subdirectory(example)
 
 
