--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,8 @@ add_test(NAME TestTree COMMAND TestTree)
 
 add_executable(TestPerson test_person.cpp)
 add_test(NAME TestPerson COMMAND TestPerson)
-target_include_directories(TestPerson PUBLIC "${CMAKE_SOURCE_DIR}/CLI/include")
+target_include_directories(TestPerson
+        PUBLIC "${CMAKE_SOURCE_DIR}/examples/CLI-Person/include")
 
-add_executable(TestUsefulFunctions test_commonFunctions.cpp)
+add_executable(TestUsefulFunctions test_helpers.cpp)
 add_test(NAME TestUsefulFunctions COMMAND TestUsefulFunctions)
