--- a/ATree-API/CMakeLists.txt
+++ b/ATree-API/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(FamilyTree_LIB
-        INTERFACE)
+        familyTree.cpp)
 
 target_include_directories(FamilyTree_LIB
-        INTERFACE .)
+        PUBLIC .)
 
 
 # ${CMAKE_SOURCE_DIR} er en variabel for roten til prosjektet
