--- a/ATree-API/CMakeLists.txt
+++ b/ATree-API/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(FamilyTree_LIB
-        familyTree.cpp)
+        INTERFACE)
 
 target_include_directories(FamilyTree_LIB
-        PUBLIC .)
+        INTERFACE .)
 
 
 # ${CMAKE_SOURCE_DIR} er en variabel for roten til prosjektet
