--- a/examples/CLI-Person/CMakeLists.txt
+++ b/examples/CLI-Person/CMakeLists.txt
@@ -1,13 +1,9 @@
 
 add_executable(CLIPersonExample
-        CLIExample.cpp
-        menu.cpp
-        person.cpp)
+        CLIExample.cpp)
 
 
-target_include_directories(CLIPersonExample
-        PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
-        )
+#target_include_directories(CLIPersonExample PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 #target_link_libraries(CLIPersonExample INTERFACE FamilyTree_LIB)
 
