--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 link_libraries(FamilyTree_LIB)
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
+
 
 add_subdirectory(CLI-Person)
 add_subdirectory(NoCLI)
