--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,10 @@
 cmake_minimum_required(VERSION 3.21)
-project(forfedrediagram)
+project(AncestorTree)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(ATree-API)
+add_subdirectory(src)
 add_subdirectory(examples)
 
 enable_testing() #Enable c-tests for testing in GitHub workflows
 add_subdirectory(tests) # Ligger egen CMakeLists.txt i mappen tests
-
-
-#add_subdirectory(example)
-
-
-
