--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,3 @@
 
-link_libraries(FamilyTree_LIB)
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
-
-
-add_subdirectory(CLI-Person)
-add_subdirectory(NoCLI)
-
-#target_link_libraries(FamilyTree_Example FamilyTree_LIB)
+add_executable(NoCLI no_CLI.cpp)
+target_include_directories(NoCLI PUBLIC "${CMAKE_SOURCE_DIR}/include")
