--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(src)
 add_subdirectory(examples)
 
-enable_testing() #Enable c-tests for testing in GitHub workflows
-add_subdirectory(tests) # Ligger egen CMakeLists.txt i mappen tests
+enable_testing()
+add_subdirectory(tests)
